--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -3,3 +3,87 @@
   height: auto;
   margin: auto;
 }
+
+.carousel-item {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.vehicle-make {
+  position: absolute;
+  top: 1vw;
+  left: 1vw;
+  animation-name: textMotionMake;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+.vehicle-toyota {
+  position: absolute;
+  top: 1vw;
+  left: 1vw;
+  animation-name: textMotionToyota;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+
+.vehicle-name {
+  position: absolute;
+  animation-name: textMotionName;
+  top: 10vw;
+  left: 1vw;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+.vehicle-supra {
+  position: absolute;
+  position: absolute;
+  animation-name: textMotionSupra;
+  top: 7vw;
+  left: 1vw;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+
+@keyframes textMotionMake {
+  0% {
+    transform: translateX(-1000vw);
+  }
+  100% {
+    transform: translateX(7vw);
+    font-size: 6vw;
+  }
+}
+
+@keyframes textMotionName {
+  0% {
+    transform: translateX(-1000vw);
+  }
+  100% {
+    transform: translateX(13vw);
+    font-size: 5vw;
+  }
+}
+
+@keyframes textMotionToyota {
+  0% {
+    transform: translateX(1000vw);
+  }
+  100% {
+    transform: translateX(60vw);
+    font-size: 6vw;
+  }
+}
+@keyframes textMotionSupra {
+  0% {
+    transform: translateX(1000vw);
+  }
+  100% {
+    transform: translateX(80vw);
+    font-size: 5vw;
+  }
+}
