--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -5,50 +5,54 @@
 }
 
 .carousel-item {
+  width: 100%;
   position: relative;
   text-align: center;
   color: white;
 }
 
+.porsche-hover {
+  color: white;
+  &:hover {
+    color: #fb2851;
+  }
+}
+
+.ferrari-hover {
+  color: white;
+  &:hover {
+    color: #e5b106;
+  }
+}
+
+.lambo-hover {
+  color: white;
+  &:hover {
+    color: #8ff983;
+  }
+}
+.mclaren-hover {
+  color: white;
+  &:hover {
+    color: #f4623a;
+  }
+}
+
 .vehicle-make {
+  z-index: 1000;
   position: absolute;
   top: 1vw;
   left: 1vw;
+  margin: 0;
   animation-name: textMotionMake;
-  animation-duration: 1s;
+  animation-duration: 3s;
   animation-direction: alternate;
   animation-fill-mode: forwards;
+  &:hover {
+    transition: 0.4s ease-in;
+    transform: translateY(1vw) translateX(7.5vw) !important;
+  }
 }
-.vehicle-toyota {
-  position: absolute;
-  top: 1vw;
-  left: 1vw;
-  animation-name: textMotionToyota;
-  animation-duration: 1s;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-}
-
-.vehicle-name {
-  position: absolute;
-  animation-name: textMotionName;
-  top: 10vw;
-  left: 1vw;
-  animation-duration: 2s;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-}
-.vehicle-supra {
-  position: absolute;
-  position: absolute;
-  animation-name: textMotionSupra;
-  top: 7vw;
-  left: 1vw;
-  animation-duration: 2s;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-}
-
 @keyframes textMotionMake {
   0% {
     transform: translateX(-1000vw);
@@ -59,31 +63,138 @@
   }
 }
 
-@keyframes textMotionName {
+.vehicle-ferrari {
+  z-index: 1000;
+  position: absolute;
+  top: 10vw;
+  left: 1vw;
+  margin: 0;
+  animation-name: textMotionFerrari;
+  animation-duration: 4s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  &:hover {
+    transition: 0.4s ease-in;
+    transform: translateY(0.5vw) translateX(13vw) !important;
+  }
+}
+@keyframes textMotionFerrari {
   0% {
     transform: translateX(-1000vw);
   }
   100% {
-    transform: translateX(13vw);
+    transform: translateX(12vw);
     font-size: 5vw;
   }
 }
+.vehicle-porsche {
+  position: absolute;
+  z-index: 1000;
+  animation-name: textMotionPorsche;
+  top: 7vw;
+  left: 1vw;
+  animation-duration: 4s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  &:hover {
+    transition: 0.4s ease-in;
+    transform: translateY(0.4vw) translateX(72vw) !important;
+  }
+}
+@keyframes textMotionPorsche {
+  0% {
+    transform: translateX(1000vw);
+  }
+  100% {
+    transform: translateX(72.5vw);
+    font-size: 5vw;
+  }
+}
+.vehicle-lambo {
+  z-index: 1000;
+  position: absolute;
+  animation-name: textMotionLambo;
+  top: 0;
+  left: 1vw;
+  animation-duration: 3s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  &:hover {
+    transition: 0.4s ease-in;
+    transform: translateY(0.3vw) translateX(5vw) !important;
+  }
+}
+@keyframes textMotionLambo {
+  0% {
+    transform: translateX(-1000vw);
+  }
+  100% {
+    transform: translateX(6vw);
+    font-size: 5vw;
+  }
+}
+.vehicle-lambo2 {
+  z-index: 1000;
+  position: absolute;
+  animation-name: textMotionLambo2;
+  top: 3vw;
+  left: 1vw;
+  animation-duration: 4s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  &:hover {
+    transition: 0.4s ease-in;
+    transform: translateY(0.5vw) translateX(66vw) !important;
+  }
+}
 
-@keyframes textMotionToyota {
+@keyframes textMotionLambo2 {
+  0% {
+    transform: translateX(1000vw);
+  }
+  100% {
+    transform: translateX(65vw);
+    font-size: 5vw;
+  }
+}
+.vehicle-mclaren {
+  z-index: 1000;
+  position: absolute;
+  top: 1vw;
+  left: 1vw;
+  animation-name: textMotionMclaren;
+  animation-duration: 3s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+
+@keyframes textMotionMclaren {
   0% {
     transform: translateX(1000vw);
   }
   100% {
     transform: translateX(60vw);
-    font-size: 6vw;
+    font-size: 5vw;
   }
 }
-@keyframes textMotionSupra {
+
+.vehicle-p1 {
+  z-index: 1000;
+  position: absolute;
+  animation-name: textMotionMclaren;
+  top: 7vw;
+  left: 1vw;
+  animation-duration: 4s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+}
+
+@keyframes textMotionMclaren {
   0% {
     transform: translateX(1000vw);
   }
   100% {
-    transform: translateX(80vw);
+    transform: translateX(78vw);
     font-size: 5vw;
   }
 }
