--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./_partials/login";
 @import "./_partials/footer";
 @import "./_partials/models";
+@import "./_partials/gallary";
 
 body {
   margin: 0 1rem;
