--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -556,6 +556,7 @@
 
 .project__showAll {
   margin: 2rem auto;
+  margin-bottom: 0;
   text-align: center;
   width: 10rem;
   background-color: #303841;
@@ -586,11 +587,6 @@
 }
 
 @media only screen and (min-width: 993px) {
-  .project__title-wrap {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
   .project-tile {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -658,6 +654,153 @@
     transition: opacity 0.2s ease-in;
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
+  }
+}
+
+.gallary {
+  width: 80vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  vertical-align: center;
+  margin: auto auto;
+  margin-bottom: 3rem;
+}
+
+.gallary img {
+  height: 100%;
+  opacity: 80%;
+}
+
+.gallary img:hover {
+  -webkit-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+  opacity: 100%;
+}
+
+.gallary-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.gallary-left-top {
+  -webkit-box-flex: 0.7;
+      -ms-flex: 0.7;
+          flex: 0.7;
+  margin-bottom: 0.3rem;
+}
+
+.gallary-left-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0.3;
+      -ms-flex: 0.3;
+          flex: 0.3;
+  margin-bottom: 1rem;
+}
+
+.gallary-left-bottom-left-image {
+  -webkit-box-flex: 0.6;
+      -ms-flex: 0.6;
+          flex: 0.6;
+}
+
+.gallary-left-bottom-right-image {
+  -webkit-box-flex: 0.4;
+      -ms-flex: 0.4;
+          flex: 0.4;
+}
+
+.gallary-left-bottom-right-image img {
+  height: 100%;
+}
+
+.gallary-left-bottom-left-image {
+  margin-right: 0.3rem;
+}
+
+.gallary-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.gallary-right-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0.3;
+      -ms-flex: 0.3;
+          flex: 0.3;
+  margin-top: 0.3rem;
+}
+
+.gallary-right-top-left-image {
+  margin-right: 0.3rem;
+}
+
+.gallary-right-bottom {
+  -webkit-box-flex: 0.7;
+      -ms-flex: 0.7;
+          flex: 0.7;
+}
+
+.gallary-image {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media only screen and (min-width: 1440px) {
+  .gallary {
+    width: 100%;
+  }
+  .gallary-left, .gallary-right {
+    -webkit-box-flex: 0.45;
+        -ms-flex: 0.45;
+            flex: 0.45;
+  }
+  .gallary-left-bottom {
+    margin-bottom: 0;
+  }
+  .gallary-right {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 0.3rem;
+  }
+  .gallary-right-top {
+    margin-top: 0;
+    margin-bottom: 0.3rem;
+  }
+  .gallary-right-bottom-image {
+    height: 100%;
+  }
+  .gallary-right-bottom-image img {
+    height: 100%;
   }
 }
 
