--- a/client/src/styles/_partials/_gallary.scss
+++ b/client/src/styles/_partials/_gallary.scss
@@ -1,14 +1,12 @@
 .gallary {
   img {
+    width: 100%;
     height: 100%;
-    opacity: 80%;
-    &:hover {
-      transition: opacity 0.5s ease;
-      opacity: 100%;
-    }
+    object-fit: cover;
   }
 
   width: 80vw;
+  width: 100%;
   display: flex;
   flex: 1;
   flex-wrap: wrap;
@@ -25,6 +23,10 @@
     &-top {
       flex: 0.7;
       margin-bottom: 0.3rem;
+      &-image {
+        width: 100%;
+        height: 100%;
+      }
     }
     &-bottom {
       display: flex;
@@ -36,9 +38,6 @@
       }
       &-right-image {
         flex: 0.4;
-        img {
-          height: 100%;
-        }
       }
 
       &-left-image {
@@ -55,8 +54,12 @@
       display: flex;
       flex: 0.3;
       margin-top: 0.3rem;
+      &-right-image {
+        flex: 0.6;
+      }
 
       &-left-image {
+        flex: 0.4;
         margin-right: 0.3rem;
       }
     }
@@ -64,16 +67,10 @@
       flex: 0.7;
     }
   }
-
-  &-image {
-    width: 100%;
-    object-fit: cover;
-  }
 }
 
 @include desk {
   .gallary {
-    width: 100%;
     &-left,
     &-right {
       flex: 0.45;
@@ -91,12 +88,31 @@
         margin-top: 0;
         margin-bottom: 0.3rem;
       }
-      &-bottom-image {
-        height: 100%;
-        img {
-          height: 100%;
-        }
-      }
     }
   }
+}
+.image-box {
+  width: 80vw;
+  max-height: 90%;
+  img {
+    width: 100%;
+    height: 100%;
+    max-height: 100% !important;
+    object-fit: cover;
+  }
+}
+
+.react-fancybox,
+.thumbnail {
+  width: 100%;
+  height: 100%;
+}
+
+.thumbnail img {
+  transition: opacity 0.4s ease;
+  opacity: 80%;
+  &:hover {
+    opacity: 100%;
+  }
+  max-width: 100% !important;
 }
