--- a/client/src/styles/_partials/_gallary.scss
+++ b/client/src/styles/_partials/_gallary.scss
@@ -95,6 +95,7 @@
   width: 80vw;
   max-height: 90%;
   img {
+    z-index: 100;
     width: 100%;
     height: 100%;
     max-height: 100% !important;
