--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,6 +5,9 @@
 @import "./_partials/footer";
 @import "./_partials/models";
 @import "./_partials/gallary";
+@import "./_partials/discover";
+@import "./_partials/garage";
+@import "./_partials/contact";
 
 body {
   margin: 0 1rem;
