--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "./_partials/discover";
 @import "./_partials/garage";
 @import "./_partials/contact";
+@import "./_partials/vehicles";
 
 body {
   margin: 0 1rem;
