--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,6 +2,8 @@
 /* media query for high pixel density desktops */
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,700;1,900&display=swap");
 .header a,
 .header img {
   margin: auto 1rem;
@@ -1015,6 +1017,113 @@
   #dropdown,
   #textarea {
     width: 50vw;
+  }
+}
+
+.vehicles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 2rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.vehicles__models {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.vehicles__title {
+  font-family: "ACME";
+  margin: 2rem;
+}
+
+.vehicles__sub-title {
+  font-family: "Mulish";
+  font-style: italic;
+  margin-bottom: 2rem;
+}
+
+.vehicleCard {
+  max-width: 23rem;
+  max-height: 50rem;
+  padding: 1rem;
+  margin: 1rem;
+  text-align: center;
+  outline: 0.1rem solid grey;
+  border: 0.3rem solid transparent;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.vehicleCard:hover {
+  outline: 0.1rem solid transparent;
+  border: 0.3rem solid #0198fa;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.vehicleCard__title {
+  text-align: left;
+  font-size: 1.5rem;
+}
+
+.vehicleCard__msrp {
+  color: grey;
+}
+
+.vehicleCard__imgD {
+  height: 15rem;
+  max-height: 30rem;
+}
+
+.vehicleCard__imgD img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.vehicleCard__imgD img:hover {
+  transform: rotate(0deg);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  -webkit-filter: FlipH;
+          filter: FlipH;
+  -ms-filter: "FlipH";
+}
+
+.vehicleCard__btn {
+  margin: 0 0.2rem;
+}
+
+@media only screen and (min-width: 1440px) {
+  .vehicles {
+    margin: 2rem 8%;
   }
 }
 
