--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -982,13 +982,13 @@
 #name,
 #email,
 #dropdown,
-#textarea {
+#comment {
   width: 60vw;
   margin: 1rem 0;
   height: 3rem;
 }
 
-#textarea {
+#comment {
   min-height: 10rem;
 }
 
@@ -1015,7 +1015,7 @@
   #name,
   #email,
   #dropdown,
-  #textarea {
+  #comment {
     width: 50vw;
   }
 }
